--- a/todo/Saanti/BankApplication/inc/headerCuenta.html
+++ b/todo/Saanti/BankApplication/inc/headerCuenta.html
@@ -17,6 +17,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
         </head>
 	<body>
 	
