--- a/todo/Saanti/BankApplication/inc/headerCCuenta.html
+++ b/todo/Saanti/BankApplication/inc/headerCCuenta.html
@@ -17,7 +17,18 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    </head>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
+    </head>
+
     <body>
 
         <h2>Cierre de cuentas</h2>
+        <div>
+            <ul>
+                <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
+                <li><a href="./movimiento.php">Listado de moviminetos</a></li>
+                <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
+                <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
+
+            </ul>
+        </div>
