--- a/todo/Saanti/BankApplication/inc/headerCuenta.html
+++ b/todo/Saanti/BankApplication/inc/headerCuenta.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="ES">
-	<head>
-		<title>APLICACION BANCARIA 20.0</title>			 
-		<meta name="author" content="Francisco Folguera ">
-		<meta charset="UTF-8">
-                <script src="../inc/funcionesOCuenta.js" type="text/javascript"></script>
-                <script src="../files/JQueryFile/jquery-3.3.1.min.js" type="text/javascript"></script>
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <head>
+        <title>APLICACION BANCARIA 20.0</title>			 
+        <meta name="author" content="Francisco Folguera ">
+        <meta charset="UTF-8">
+        <script src="../inc/funcionesOCuenta.js" type="text/javascript"></script>
+        <script src="../files/JQueryFile/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
-        </head>
-	<body>
-	
-            <h2>Pagina de apertura de cuentas</h2>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
+        <link href="../css/newstyle.css" rel="stylesheet" type="text/css"/>
+    </head>
+   
+    <body>
+
+        <h2>Cierre de cuentas</h2>
+        
+
+            
+
+        <div>
+                <ul>
+                    <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
+                    <li><a href="./movimiento.php">Listado de moviminetos</a></li>
+                    <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
+                    <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
+
+                </ul>
+        </div>
