--- a/todo/Saanti/BankApplication/inc/headerMovimientos.html
+++ b/todo/Saanti/BankApplication/inc/headerMovimientos.html
@@ -6,7 +6,16 @@
 		<meta charset="UTF-8">
                 <script src="../inc/funcionesMovimientos.js" type="text/javascript"></script>
                 <script src="../files/JQueryFile/jquery-3.3.1.min.js" type="text/javascript"></script>
-	</head>
-	<body>
-	
-            <h2>Pagina de listado de movimientos</h2>
+	 <link href="../css/newstyle.css" rel="stylesheet" type="text/css"/>
+    </head>
+   
+    <body>
+
+        <h2>Cierre de cuentas</h2>
+        <ul>
+            <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
+            <li><a href="./movimiento.php">Listado de moviminetos</a></li>
+            <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
+            <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
+
+        </ul>
