--- a/todo/Saanti/BankApplication/inc/headerCuenta.html
+++ b/todo/Saanti/BankApplication/inc/headerCuenta.html
@@ -18,22 +18,23 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
-        <link href="../css/newstyle.css" rel="stylesheet" type="text/css"/>
+
+        <link rel="stylesheet/less" type="text/css" href="../less/estilo.less" />
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>   
     </head>
-   
+
     <body>
 
+
+
+
+
+
+        <ul class="menu">
+            <li class="active"><a href="./open_cuenta.php">Abrir cuenta</a></li>
+            <li><a href="./movimiento.php">Listado de moviminetos</a></li>
+            <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
+            <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
+
+        </ul>
         <h2>Cierre de cuentas</h2>
-        
-
-            
-
-        <div>
-                <ul>
-                    <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
-                    <li><a href="./movimiento.php">Listado de moviminetos</a></li>
-                    <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
-                    <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
-
-                </ul>
-        </div>
