--- a/todo/Saanti/BankApplication/inc/headerCCuenta.html
+++ b/todo/Saanti/BankApplication/inc/headerCCuenta.html
@@ -5,6 +5,10 @@
         <meta name="author" content="Francisco Folguera ">
         <meta charset="UTF-8">
         <script src="../inc/funcionesCCuenta.js" type="text/javascript"></script>
+        <!-- carga el less -->
+        <link rel="stylesheet/less" type="text/css" href="../less/estilo.less" />
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>   
+
         <script src="../files/JQueryFile/jquery-3.3.1.min.js" type="text/javascript"></script>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -22,13 +26,13 @@
 
     <body>
 
-        <h2>Cierre de cuentas</h2>
-        <div>
-            <ul>
-                <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
-                <li><a href="./movimiento.php">Listado de moviminetos</a></li>
-                <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
-                <li><a href="./close_cuenta.php">Cerrar cuenta</a></li>
 
-            </ul>
-        </div>
+
+        <ul class="menu">
+            <li><a href="./open_cuenta.php">Abrir cuenta</a></li>
+            <li><a href="./movimiento.php">Listado de moviminetos</a></li>
+            <li><a href="./ingresos.php">Ingresos y reintegros</a></li>
+            <li class="active"><a href="./close_cuenta.php">Cerrar cuenta</a></li>
+
+        </ul>
+        <h2>Cierre de cuentas</h2>
